--- a/src/components/Viewers/ImageViewer.css
+++ b/src/components/Viewers/ImageViewer.css
@@ -1,3 +1,4 @@
 img {
     border: 1px solid #313540;
+    width:100%;
 }
